fixed picture width on mobile

--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
   .main-content {
     flex-direction: column;
   }
+  .profile-photo {
+    height: 100vw !important;
+  }
 }
 
 .about-text {
